--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>D2</title>
+    <title>Xpertweb</title>
     <style>
         .cursor {
             position: fixed;
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="navbarCont">
                     <div class="logo">
-                        <p>Zebronics</p>
+                        <p>Logo</p>
                     </div>
                     <div class="displayDesktop">
                         <ul class="navLinks aln-cntr">
@@ -506,14 +506,14 @@
                         <h5>Contact Us</h5>
                         <div class="footerFlex">
                             <p>
-                                <a href="tel:9465473151">+91 9465473151</a>
+                                <a href="tel:9463582041">+91 94635-82041</a>
                             </p>
                             <p>
-                                <a href="mailtto:gurheesolutions@gmail.com">@gmail.com</a>
+                                <a href="mailtto:xpertweb2024@gmail.com"><i class="fa-solid fa-phone"></i>xpertweb2024@gmail.com>@gmail.com</a>
                             </p>
-                            <p>
+<!--                             <p>
                                 <a href="#">Punjab, INDIA</a>
-                            </p>
+                            </p> -->
                         </div>
                     </div>
                 </div>
