--- a/index.html
+++ b/index.html
@@ -506,10 +506,10 @@
                         <h5>Contact Us</h5>
                         <div class="footerFlex">
                             <p>
-                                <a href="tel:9463582041">+91 94635-82041</a>
+                                <a href="tel:9463582041"><i class="fa-solid fa-phone"></i>+91 94635-82041</a>
                             </p>
                             <p>
-                                <a href="mailtto:xpertweb2024@gmail.com"><i class="fa-solid fa-phone"></i>xpertweb2024@gmail.com>@gmail.com</a>
+                                <a href="mailtto:xpertweb2024@gmail.com">xpertweb2024@gmail.com>@gmail.com</a>
                             </p>
 <!--                             <p>
                                 <a href="#">Punjab, INDIA</a>
