--- a/index.html
+++ b/index.html
@@ -506,12 +506,11 @@
                     <div class="col-4 footerheading">
                         <h5>Contact Us</h5>
                         <div class="footerFlex">
-                            <p>
-                                <a href="tel:9463582041"><i class="fa-solid fa-phone"></i>+91 94635-82041</a>
-                            </p>
-                            <p>
-                                <a href="mailtto:xpertweb2024@gmail.com">xpertweb2024@gmail.com</a>
-                            </p>
+                            <ul>
+                                <li><a href="tel:9463582041"><i class="fa-solid fa-phone"></i>+91 94635-82041</a></li>
+                                <li><a href="mailtto:xpertweb2024@gmail.com"><i class="fa-solid fa-envelope"></i> xpertweb2024@gmail.com</a></li>
+                            </ul>
+                            
 
                         </div>
                     </div>
