--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <div class="container">
                 <div class="row footerRow">
                     <div class="col-4 footerAbt footerheading">
-                        <h5>Zebronics</h5>
+                        <h5>Logo</h5>
                         <p>
                             We are your reliable IT company, providing site design and development as well as unique solutions for your digital needs.
                         </p>
